2011-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m:
	* Source/GSInternal.h:
	* Source/DocMakefile:
	* Source/Additions/GSMime.m:
	* Source/Additions/GSObjCRuntime.m:
	* Source/NSConnection.m:
	* Source/NSDateFormatter.m:
	* Documentation/coding-standards.texi:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSPropertyList.h:
	* Headers/Foundation/NSConnection.h:
	* Headers/Foundation/NSObjCRuntime.h:
	* Headers/Foundation/NSFileHandle.h:
	* Headers/Additions/GNUstepBase/GSMime.h:
	* Tools/DocMakefile:
	* Tools/AGSParser.m:
	Documentation cleanups and fixes ... add new macros to list of symbols
	to ignore.  Add support for @optional and @required. Add support for
	method attributes.

2011-02-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSPortCoder.h:
	* Headers/Foundation/NSCache.h:
	* Headers/Foundation/NSSpellServer.h:
	* Headers/Foundation/NSDecimalNumber.h:
	* Headers/Foundation/NSBundle.h:
	* Headers/Foundation/NSTimer.h:
	* Headers/Foundation/NSScanner.h:
	* Headers/Foundation/NSDistributedNotificationCenter.h:
	* Headers/Foundation/NSComparisonPredicate.h:
	* Headers/Foundation/NSUndoManager.h:
	* Headers/Foundation/NSDateFormatter.h:
	* Headers/Foundation/NSAutoreleasePool.h:
	* Headers/Foundation/NSUserDefaults.h:
	* Headers/Foundation/NSXMLNode.h:
	* Headers/Foundation/NSThread.h:
	* Headers/Foundation/NSHost.h:
	* Headers/Foundation/NSRegularExpression.h:
	* Headers/Foundation/NSKeyedArchiver.h:
	* Headers/Foundation/NSProtocolChecker.h:
	* Headers/Foundation/NSError.h:
	* Headers/Foundation/NSPortMessage.h:
	* Headers/Foundation/NSFileHandle.h:
	* Headers/Foundation/NSDistributedLock.h:
	* Headers/Foundation/NSPort.h:
	* Headers/Foundation/NSSortDescriptor.h:
	* Headers/Foundation/NSLocale.h:
	* Headers/Foundation/NSTask.h:
	* Headers/Foundation/NSArchiver.h:
	* Headers/Foundation/NSInvocation.h:
	* Headers/Foundation/NSFileManager.h:
	* Headers/Foundation/NSNumberFormatter.h: